Fix issue with z-index on buttons

--- a/src/output.css
+++ b/src/output.css
@@ -545,6 +545,15 @@
   .bottom-\[20px\] {
     bottom: 20px;
   }
+  .z-1 {
+    z-index: 1;
+  }
+  .z-2 {
+    z-index: 2;
+  }
+  .z-50 {
+    z-index: 50;
+  }
   .mx-0 {
     margin-inline: calc(var(--spacing) * 0);
   }
@@ -831,6 +840,16 @@
         --tw-scale-x: 110%;
         --tw-scale-y: 110%;
         --tw-scale-z: 110%;
+        scale: var(--tw-scale-x) var(--tw-scale-y);
+      }
+    }
+  }
+  .hover\:scale-125 {
+    &:hover {
+      @media (hover: hover) {
+        --tw-scale-x: 125%;
+        --tw-scale-y: 125%;
+        --tw-scale-z: 125%;
         scale: var(--tw-scale-x) var(--tw-scale-y);
       }
     }
